# newspaper_crawler

./: .gitignore  app.py  chengdu_daily.py  people_daily.py  pyproject.toml  sichuan_daily.py
common/: date.py  file.py  web.py
newspaper_crawler/: pyproject.toml
templates/: index.html
